--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <div class="container">
       <div class="banner-text">
-        <h1>CodeAndCreate</h1>
-        <p>Learn how to code</p>
+        <h1>Fitness Project</h1>
+        <p>Let's get fit</p>
       </div>
       <div class="btns">
         <button class="btn login-btn">Login</button>
@@ -33,7 +33,7 @@
             &times;
           </div>
           <div class="form-header">
-            <h1>CodeAndCreate</h1>
+            <h1>Fitness Project</h1>
             <h3>Join US</h3>
           </div>
           <form class="form">
@@ -57,7 +57,7 @@
             &times;
           </div>
           <div class="form-header">
-            <h1>CodeAndCreate</h1>
+            <h1>Fitness Project</h1>
             <h3>Login</h3>
           </div>
           <form class="form">
